# yapapi-dual-task

./: .gitignore  README.md  manage.py  pyproject.toml
templates/: blender.html  blender_out.html
yapapi_dual_task/: asgi.py  forms.py  settings.py  urls.py  views.py  wsgi.py
yapapi_dual_task/golem/: __init__.py  async_singleton.py  service.py  singleton.py
