[tool.poetry]
name = "yapapi-dual-task"
version = "0.1.0"
description = ""
authors = ["shadeofblue <blue@wave460.net>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.2.5"
yapapi = {git = "https://github.com/golemfactory/yapapi.git"}
uvicorn = "^0.14.0"
gunicorn = "^20.1.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
